--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: computers4kids
+  github: Jeyden13
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: c4kcho
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: TheMixedSavage # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
